<?xml version="1.0"?>
<package>
  <name>force_proximity_ros</name>
  <version>0.0.1</version>
  <description>The force_proximity_ros package</description>

  <maintainer email="guilherme.c.affonso@gmail.com">Guilherme Affonso</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>


  <url type="website">http://wiki.ros.org/force_proximity_ros</url>


  <author email="guilherme.c.affonso@gmail.com">Guilherme Affonso</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>rosserial_python</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rosserial_python</run_depend>


  <export>
  </export>
</package>
